--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Understanding Typescript</title>
 </head>
 <body>
-    
-    <script src="app.js" defer ></script>
+    <button>button</button>
+    <script src="./dist/app.js" defer ></script>
 </body>
 </html>
